# lunatask-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.example.toml  config.toml  opencode.json  pyproject.toml
.bmad-core/: install-manifest.yaml
.github/workflows/: ci.yml
.kilocode/: mcp.json
docs/architecture/: 1-introduction.md  10-error-handling-strategy.md  11-coding-standards.md  2-high-level-architecture.md  3-tech-stack.md  4-data-models.md  5-components.md  6-external-apis.md  7-core-workflows.md  8-source-tree.md  9-infrastructure-and-deployment.md  index.md
docs/prd/: 1-goals-and-background-context.md  2-requirements.md  3-technical-assumptions.md  4-epic-list.md  epic-1-foundation-core-server.md  epic-2-full-task-api-integration.md  epic-3-habit-tracking-release-readiness.md  index.md
docs/refactor/: 03-tasktools-tests-modularization.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4-remaining-enhancements.md  1.4.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  2.5.story.md  2.6.story.md  2.7.story.md  3.1.story.md  3.2.story.md
src/lunatask_mcp/: __init__.py  config.py  main.py  rate_limiter.py
src/lunatask_mcp/api/: __init__.py  client.py  client_base.py  client_habits.py  client_journal.py  client_notes.py  client_people.py  client_person_timeline_notes.py  client_tasks.py  exceptions.py  models.py  models_people.py  protocols.py
src/lunatask_mcp/tools/: __init__.py  habits.py  journal.py  notes.py  people.py  tasks.py  tasks_common.py  tasks_create.py  tasks_delete.py  tasks_resources.py  tasks_update.py
tests/: __init__.py  conftest.py  factories.py  test_api_client.py  test_api_client_auth_and_connectivity.py  test_api_client_characterization.py  test_api_client_common.py  test_api_client_create_journal_entry.py  test_api_client_create_note.py  test_api_client_create_person.py  test_api_client_create_person_timeline_note.py  test_api_client_create_task.py  test_api_client_delete_note.py  test_api_client_delete_person.py  test_api_client_delete_task.py  test_api_client_get_task.py  test_api_client_get_tasks.py  test_api_client_init_and_http.py  test_api_client_model_validation.py  test_api_client_notes_parse_errors.py  test_api_client_rate_limiting.py  test_api_client_security.py  test_api_client_track_habit.py  test_api_client_unmapped_status.py  test_api_client_update_note.py  test_api_client_update_task.py  test_api_models_journal.py  test_api_models_notes.py  test_api_models_people.py  test_api_models_person_timeline_notes.py  test_api_models_task_payload.py  test_client_test_script.py  test_config.py  test_config_precedence.py  test_error_handling.py  test_factories_journal.py  test_habit_tools_track_tool.py  test_journal_tools_create_entry_tool_e2e.py  test_logging_and_redaction_global_aliases.py  test_logging_configuration.py  (+51 more)
